--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,5 +5,9 @@ body {
 	width: 50%;
 	margin: 0 auto;
 	background-color: #eee;
-	border: 2px solid #222;
+	border: 1px solid #222;
+}
+.done-true {
+	text-decoration: line-through;
+	color: gray;
 }
