--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,31 @@
 
 {% block body %}
 <h1>Angular with flask sample.</h1>
-<div class="box">
+<section class="box">
 	<h1>Data binding</h1>
 	<hr>
 	<label>Name</label>
 	<input type="text" ng-model="yourname" placeholder="enter a name here">
 	<h2>Hello! [[yourname]]</h2>
-</div>
-<div class="box">
-</div>
+</section>
+<section class="box">
+	<h1>Controller</h1>
+	<div ng-controller="TodoCtrl">
+		<span>[[remaining()]] of [[todos.length]] remaining</span>
+		[ <a href="#" ng-click="archive()">archive</a> ]
+		<ul class="unstyled">
+			<li ng-repeat="todo in todos">
+				<input type="checkbox" ng-model="todo.done">
+				<span class="done-[[todo.done]]">[[todo.text]]</span>
+			</li>
+		</ul>
+		<form ng-submit="addTodo()">
+			<input type="text" ng-model="todoText" size="30" placeholder="add new todo here">
+			<input type="submit" value="add">
+		</form>
+	</div>
+</section>
+<section class="box">
+	<h1>Wire up backend</h1>
+</section>
 {% endblock %}
